[package]
name = "fn_ops"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "Temporary traits for function operator overloading, pending the stabilization of `Fn`, `FnMut`, and `FnOnce`."

documentation = "http://bjz.github.io/fn_ops"
homepage = "https://github.com/bjz/fn_ops"
repository = "https://github.com/bjz/fn_ops"
readme = "README.md"

keywords = ["operators", "functions"]

[lib]
name = "fn_ops"
